Misc fixes, scrollbar padding and placeholders

--- a/less/custom/components.less
+++ b/less/custom/components.less
@@ -356,6 +356,10 @@ body {
   background: @brand-info;
   color: @white;
 
+  .noscroll & {
+    padding-right: 15px;
+  }
+
   .page-header-upper {
     padding-top: (@font-size-base * 2);
   }
