--- a/less/custom/tile-grid.less
+++ b/less/custom/tile-grid.less
@@ -358,6 +358,12 @@
     &:focus {
       z-index: 100;
     }
+
+    &.grid-cell-placeholder {
+      &:after {
+        &:extend(.link-tile-flat:after);
+      }
+    }
   }
 }
 
